Spacing on loader and reorder flickr response so in the correct order.

--- a/assets/css/sass/_stories.scss
+++ b/assets/css/sass/_stories.scss
@@ -20,13 +20,13 @@
 	}
 	.loading-spinner-container {
 	    text-align: center;
-	    margin: 20px 0;
 	}
 	.loading-spinner {
 		content: "";
 	    display: inline-block;
 	    width: 50px;
 	    height: 50px;
+	    margin: 50px 0;
 	    z-index: 1;
 	    border-radius: 50%;
 	    border: 2px solid $emerald;
@@ -136,6 +136,7 @@
 		background-image: url('../img/backgrounds/road-background-small.fw.png');
 		background-repeat: repeat-y;
 		background-position: center;
+		min-height: 0;
 	}
 	blockquote {
 		width: 50%;
